--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <section class="category">
         <div class="product-nav">
             <div class="product">
-                <img src="/images/product-1.webp" alt="Top Offers">
+                <img src="./images/product-1.webp" alt="Top Offers">
                 <p>Top Offers</p>
             </div>
             <div class="product">
-                <img src="/images/product-2.webp" alt="Grocery">
+                <img src="./images/product-2.webp" alt="Grocery">
                 <p>Grocery</p>
             </div>
             <div class="product">
@@ -58,27 +58,27 @@
                 <p>Mobiles</p>
             </div>
             <div class="product">
-                <img src="/images/product-4.png" alt="Fashion">
+                <img src="./images/product-4.png" alt="Fashion">
                 <p>Fashion&#x2304</p>
             </div>
             <div class="product">
-                <img src="/images/product-5.webp" alt="Electronics">
+                <img src="./images/product-5.webp" alt="Electronics">
                 <p>Electronics&#x2304</p>
             </div>
             <div class="product">
-                <img src="/images/product-6.webp" alt="Home">
+                <img src="./images/product-6.webp" alt="Home">
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;Home&#x2304</p>
             </div>
             <div class="product">
-                <img src="/images/product-7.webp" alt="Appliances">
+                <img src="./images/product-7.webp" alt="Appliances">
                 <p>Appliances&#x2304</p>
             </div>
             <div class="product">
-                <img src="/images/product-8.webp" alt="Travel">
+                <img src="./images/product-8.webp" alt="Travel">
                 <p>&nbsp;&nbsp;Travel</p>
             </div>
             <div class="product">
-                <img src="/images/product-9.webp" alt="Beauty, Toys & More">
+                <img src="./images/product-9.webp" alt="Beauty, Toys & More">
                 <p>Beauty, Toys & More&#x2304</p>
             </div>
         </div>
