--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p>Grocery</p>
             </div>
             <div class="product">
-                <img src="/images/product-3.webp" alt="Mobiles">
+                <img src="./images/product-3.webp" alt="Mobiles">
                 <p>Mobiles</p>
             </div>
             <div class="product">
