--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="logooo">
               
                 <div class="logo">
-                    <img src="images/logo.png"
+                    <img src="./images/logo.png"
                         height="20px" width="75px">
                     <p class="logo-colour">Explore <span class="plus-colour">Plus</span><img
-                            src="images/logo-plus.png"
+                            src="./images/logo-plus.png"
                             height="10px" width="10px"></p>
                 </div>
                 <div class="search-bar">
@@ -51,7 +51,7 @@
                         </div>
                     </div> 
                 </div>
-                <a href="#" class="a-link"><img src="images/cart-image.png" height="18px" width="20px" class="img"></a>
+                <a href="#" class="a-link"><img src="./images/cart-image.png" height="18px" width="20px" class="img"></a>
                 <a href="#" class="b-link">Cart</a>
 
                 
