--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div class="header_main_div">
                 <div class="header_first_half">
                     <div class="flipkart-logo">
-                        <img style="display:block" src="./images/logo.png" width="75px" height="20px" alt="Logo">
-                        <a href="#">Explore <span style="color: yellow;">Plus </span></a><img src="./images/logo-plus.png" width="10px">
+                        <img class="flip-logo" style="display:block" src="./images/logo.png" width="75px" height="20px" alt="Logo">
+                        <a href="#">Explore <span style="color: yellow;">Plus </span></a><img class="plus" src="./images/logo-plus.png" width="10px">
                     </div>
                     <div class="searchbar">
                         <input type="text" placeholder="Search for products, brands and more">
